src/main/java/org/example/nanobananaprobot/errors/LoginException.java
package org.example.nanobananaprobot.errors;

public class LoginException extends SearchException {
    public LoginException(String message) {
        super(message);
    }
}
